got the top section working and added a picture folder.

--- a/less/index.less
+++ b/less/index.less
@@ -54,6 +54,85 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+
+
+	width: 800px;
+	margin: 0 auto;
 }
+
+h1, h2, h3, h4, h5, h6, a, p {
+	font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+	font-size: 2rem;
+}
+
+h2 {
+	font-size: 1.4rem;
+}
+
+h3 {
+	font-size: .8rem;
+}
+
+
+// Navigation style 
+
+header nav {
+	text-align: right;
+	margin: 4% 0;
+
+	a {
+		margin-left: 5%;
+		text-decoration: none;
+		color: black;
+	}
+}
+
+//Introduction
+
+.introduction {
+	background-color: #E9ECEF;
+	padding: 4%;
+}
+
+.intro-top {
+	padding: 2% 0;
+
+	border-bottom: 1px solid darkgray;
+
+	img, h1, h2 {
+		margin: 1% 0;
+	}
+}
+
+.intro-bottom {
+
+	
+	padding: 2% 0;
+
+	p, button {
+		margin: 1% 0;
+	}
+
+	button {
+		width: 20%;
+		height: 40px;
+
+		border-radius: 10%;
+
+		font-size: 1.2rem;
+
+		color: white;
+		background-color: #808080;
+	}
+	
+}
+
+
+
+
+
 
