started working on the middle section, gotta go to lecture

--- a/less/index.less
+++ b/less/index.less
@@ -74,7 +74,7 @@ h2 {
 }
 
 h3 {
-	font-size: .8rem;
+	font-size: 1rem;
 }
 
 
@@ -131,6 +131,19 @@ header nav {
 	
 }
 
+// middle stuff
+
+.middle {
+	display: flex;
+
+	justify-content: space-between;
+	border: 1px solid red;
+
+	div {
+		width: 40%;
+	
+	}
+}
 
 
 
