--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@ h2 {
   font-size: 1.4rem;
 }
 h3 {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 header nav {
   text-align: right;
@@ -191,4 +191,12 @@ header nav a {
   font-size: 1.2rem;
   color: white;
   background-color: #808080;
+}
+.middle {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid red;
+}
+.middle div {
+  width: 40%;
 }
