--- a/less/index.less
+++ b/less/index.less
@@ -33,7 +33,7 @@ body {
 	line-height: 1;
 }
 ol, ul {
-	list-style: none;
+	list-style:square;
 }
 blockquote, q {
 	quotes: none;
@@ -62,6 +62,8 @@ table {
 
 @nice-padding: 2% 0;
 
+@bar-color: pink;
+
 
 //Mixins hell yeah!
 
@@ -75,50 +77,98 @@ table {
 	border: 1px solid black;
 }
 
+.divider(){
+	border-bottom: 5px solid @bar-color;
+}
+
+
+//text n stuff
+p , li, a{
+	font-family: @nice-body-font;
+	padding: @nice-padding;
+	font-size: .8rem;
+	line-height: 1.5;
+}
+
 //make the outside pretty
 
 .border-container {
 	
-	background-color: #F7CAC9;
+	background-color: #A5BC59;
+	background-image: url("../img/bg.jpg");
 
 	width: 800px;
-	height: 100vh;
+	// height: 110vh;
 	margin: 0 auto;
 
+	padding: 3%;
 	display:flex;
 
+	@media (max-width: 500px){
+		width: 100%;
+	}
+
 }
 
-p {
-	font-family: @nice-body-font;
-}
+
 
 .container {
 	background-color: white;
 
-	width: 90%;
-	height: 90vh;
+	width: 100%;
 	margin: 0 auto;
 	padding: 0 4%;
 
 	align-self: center;
 }
 
-header {
+
+// header & navigation baby
+
+nav {
 	display: flex;
 
-	height: 200px;
+	justify-content: space-between;
+
+	a {
+		text-decoration: none;
+		color: darkgray;
+
+		&:hover {
+			color: @bar-color;
+		}
+	}
+
+	@media (max-width: 500px){
+		flex-direction: column;
+		align-items: center;
+	}
+
+}
+
+
+// top section stuff 
+.top-container {
+	display: flex;
 	width: 100%;
 
 	justify-content: space-between;
 	
+	@media (max-width: 500px) {
+		flex-direction: column;
+		
+	}
 
 	.name, .contact {
-		width: 40%;
-
 		.flexcol();
-
+		
+		width: 40%;
 		justify-content: center;
+
+		@media (max-width: 500px) {
+			width: 100%;
+			text-align: center;
+		}
 
 	}
 	h1 {
@@ -134,14 +184,12 @@ header {
 		padding: 4% 0;
 
 		p {
-			padding: @nice-padding;
 			text-align: right;
-			font-size: .8rem;
 		}
 	}
 
 	.remote {
-		border-bottom: 5px solid black;
+		.divider();
 	}
 
 }
@@ -152,28 +200,42 @@ header {
 	display: flex;
 	justify-content: space-between;
 
-	.col-1, .col-2 {
-		width: 40%;
+	@media (max-width: 500px){
+		.flexcol();
 	}
 
-	
+	.col-1, .col-2 {
+		width: 45%;
+
+		@media(max-width: 500px){
+			width: 100%;
+		}
+	}
+
+	//get the box for each item to look nice and stuff
 	.content-box {
 
 		.flexcol();
+
+		padding: @nice-padding;
 
 		h2 {
 			text-transform: uppercase;
 			font-family: @nice-body-font;
 
-			border-bottom: 5px solid black;
+			.divider();
 
-			// padding: @nice-padding;
+			padding: @nice-padding;
 		}
 
 		.body-text{
-			.help();
-		}
+			padding: @nice-padding;
 
+
+		}
+	.ref, .job {
+		padding: @nice-padding;
+	}
 		
 	}
 
